--- a/users.html
+++ b/users.html
@@ -32,7 +32,7 @@
 					</button>
 				</li>
 				<li class="nav-item" role="presentation">
-					<button class="nav-link" id="pills-verify-tab" data-bs-toggle="pill" data-bs-target="#pills-verify" type="button" role="tab" aria-controls="pills-verify" aria-selected="false">
+					<button class="nav-link" id="pills-archive-tab" data-bs-toggle="pill" data-bs-target="#pills-archive" type="button" role="tab" aria-controls="pills-archive" aria-selected="false">
 						Post Article
 					</button>
 				</li>
@@ -389,6 +389,26 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="tab-pane fade" id="pills-archive" role="tabpanel" aria-labelledby="pills-archive-tab">
+				<div class="d-flex my-5	justify-content-center">
+					<div class="card" style="background-color: #DCF9D4;">
+						<div class="card-body text-center">
+							<i class="fa fa-archive" style="font-size: 50px"></i>
+							<h4 class="card-title">Upload to Archive</h4>
+							<input type="file" class="form-control my-4" id="upload-file" multiple="" style="width: 500px">
+							<button class="btn-success" style="border: none; width: 120px; height: 30px; border-radius: 5px;">Upload</button>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<h5>NOTE:</h5>
+					<ol>
+						<li>Articles posted should be agricultural related</li>
+						<li>All articles sumbmitted are to be reviewed brfore being accepted to be posted.</li>
+						<li>Only relevant agricultural related news would be accepted to be uploaded to archive.</li>
+					</ol>
 				</div>
 			</div>
 		</div>
