--- a/users.html
+++ b/users.html
@@ -44,9 +44,9 @@
 					<div class="card mx-2" style="width: 40%; background-color: #DCF9D4; border-color: #226C0F;">
 						<div class="card-body">
 							<div class="text-center">
-								<svg aria-hidden="true" class="svg-spot spotReputation" width="48" height="48" viewBox="0 0 48 48"><path d="M32 9a1 1 0 01-1 1H6a1 1 0 010-2h25a1 1 0 011 1zm4.25 1.6a1 1 0 01.92-.6H41a1 1 0 110 2h-3.18l-4.9 11.4a1 1 0 01-.92.6h-7.38l-2.73 5.45A1 1 0 0121 30h-6.51l-4.07 9.4a1 1 0 01-1.84-.8l4.34-10a1 1 0 01.91-.6h6.55l2.73-5.45A1 1 0 0124 22h7.34l4.9-11.4zM42 16a1 1 0 100-2h-2a1 1 0 100 2h2zm-24 5a1 1 0 01-1 1H6a1 1 0 110-2h11a1 1 0 011 1zm24 1a1 1 0 100-2h-4a1 1 0 100 2h4zm1 11a1 1 0 01-1 1H17a1 1 0 110-2h25a1 1 0 011 1zM8 28a1 1 0 100-2H6a1 1 0 100 2h2z" opacity=".2"></path><path d="M36.17 8a1 1 0 00-.92.6L30.35 20H23a1 1 0 00-.9.55L19.39 26h-6.55a1 1 0 00-.9.58L6.1 39.08a1 1 0 001.82.84L13.47 28H20a1 1 0 00.9-.55L23.61 22H31a1 1 0 00.92-.6l4.9-11.4H42a1 1 0 100-2h-5.83zM27 16a1 1 0 100-2H6a1 1 0 100 2h21zm16 11a1 1 0 01-1 1H28a1 1 0 110-2h14a1 1 0 011 1zm-1 13a1 1 0 100-2H14a1 1 0 100 2h28z"></path></svg>
-								<h5 class="card-title" style="font-size: 15px;">Reputation is how the community thanks you</h5>
-								<p class="card-text" style="font-size: 12px;"> when users vote your helpful posts, you will earn reputation.</p>
+								<i class="fas fa-archive" style="font-size: 45px;"></i>
+								<p class="card-title" style="font-size: 15px">Articles to Archive</p>
+								<p class="card-text" style="font-size: 12px;">Articles can be posted to archive to help users access alot of agricultural related books and important materials that can help in their respective field.</p>
 							</div>
 						</div>
 					</div>
@@ -54,16 +54,16 @@
 						<div class="card-body">
 							<h5 class="card-title" style="font-size: 18px;">User Info:</h5>
 							<div class="card-text d-flex">
-								<h6 style="font-size: 15px; width: 60%;"> Display name: </h6>
+								<h6 style="font-size: 15px; width: 60%;"> Full Name: </h6>
 								<p style="font-size: 12px; float: right;"> Lawal Habeeb </p>
 							</div>
 							<div class="card-text d-flex">
-								<h6 style="font-size: 15px; width: 60%;"> Reputation: </h6>
-								<p style="font-size: 12px; float: right;"> 10 </p>
+								<h6 style="font-size: 15px; width: 60%;"> Display Name: </h6>
+								<p style="font-size: 12px; float: right;"> Lilspicy </p>
 							</div>
 							<div class="card-text d-flex">
-								<h6 style="font-size: 15px; width: 60%;"> Verification: </h6>
-								<i class="fas fa-check" style="font-size: 12px; font-weight: bold"> Verified</i>
+								<h6 style="font-size: 15px; width: 60%;"> Location: </h6>
+								<p style="font-size: 12px"> Ondo State</p>
 							</div>
 						</div>
 					</div>
