--- a/users.html
+++ b/users.html
@@ -110,8 +110,8 @@
 							</button>
 						</li>
 						<li class="nav-item" role="presentation">
-							<button class="nav-link" id="pills-reputation-tab" data-bs-toggle="pill" data-bs-target="#pills-reputation" type="button" role="tab" aria-controls="pills-reputation" aria-selected="false">
-								Reputation
+							<button class="nav-link" id="pills-saved-tab" data-bs-toggle="pill" data-bs-target="#pills-saved" type="button" role="tab" aria-controls="pills-saved" aria-selected="false">
+								Saved Questions
 							</button>
 						</li>
 						<li class="nav-item" role="presentation">
@@ -138,12 +138,12 @@
                     	<div id="user-panel-answers" class="user-panel">
 	                        <div class="d-flex align-items-center justify-content-between pb-2 mb-3 h32" style="border-bottom: 1px solid #226C0F;">
 	                            <h3 class="mb-0 mr-auto px-2 profile-section-title" style="font-size: 1.15384615rem;"> 
-	                                <a href="#"> Reputation <span>(1)</span></a>
+	                                <a href="#"> Saved Questions <span>(0)</span></a>
 	                            </h3>
 	                        </div>
 	                        <div class="user-panel-content">
 	                            <div class="empty">
-	                                you have no recent <a href="#">reputation changes</a>
+	                                you have no <a href="#">saved questions</a>
 	                            </div>
 	                        </div>
                     	</div>
@@ -266,16 +266,16 @@
 							</div>
 						</div>
 					</div>
-					<div  class="tab-pane fade" id="pills-reputation" role="tabpanel" aria-lebelledby="pills-reputation-tab">
+					<div  class="tab-pane fade" id="pills-saved" role="tabpanel" aria-lebelledby="pills-saved-tab">
 						<div>
 							<div class="d-flex align-items-center justify-content-between pb-2 mb-3 h32" style="border-bottom: 1px solid #226C0F;">
 	                            <h3 class="mb-0 mr-auto px-2 profile-section-title" style="font-size: 1.15384615rem;"> 
-	                                <a href="#"> Reputation <span>(1)</span></a>
+	                                <a href="#"> Saved Questions <span>(0)</span></a>
 	                            </h3>
 	                        </div>
 	                        <div class="user-panel-content">
 	                            <div class="empty">
-	                            	+1 reputation for joining community<span id="day-month-and-year" style="color: grey"> || 2,July,2021</span>
+	                            	You have no saved questions.
 	                            </div>
 							</div>
 						</div>
@@ -303,9 +303,8 @@
 					</div>
 					<div class="d-block me-5" style="width: 50%">
 						<h3 class="mb-3">Lawal Habeeb</h3>
-						<p class="text-muted">(Major Work has not been set)</p>
 						<p class="text-muted">(Your about me is currently blank.) </p>
-						<a href="#pills-settings" style="text-decoration: underline;">Click here to edit</a>
+						<a href="#pills-tab/#pills-settings-tab">Click Here to Edit</a>
 					</div>
 					<div class="mr-auto text-muted d-flex flex-column">
 						<i class="fas fa-map-marker-alt mb-3"> Akure, Ondo, Nigeria</i>
