--- a/jobs.html
+++ b/jobs.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		<div class="d-flex mt-5 justify-content-center">
-			<ul class="nav nav-pills mb-4" id="pills-tabs" role="tablist">
+			<ul class="nav nav-pills mb-4" id="pills-tabs3" role="tablist">
 				<li class="nav-item" role="presentation">
 					<button class="nav-link active" id="pills-be-worker-tab" data-bs-toggle="pill" data-bs-target="#pills-be-worker" type="button" role="tab" aria-controls="pills-be-worker" aria-selected="true">
 						Available Workers
@@ -52,7 +52,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="tab-content" id="pills-tabsContent">
+		<div class="tab-content" id="pills-tabsContent3">
 			
 		</div>
 	</div>
