jobs page continued

--- a/jobs.html
+++ b/jobs.html
@@ -29,11 +29,49 @@
 		<div>
 			<div class="input-group mb-3">
 				<input type="text" name="search-job" class="search-job ps-2 me-1" placeholder="Search all jobs">
-				<input type="text" name="search-job" class="search-job ps-2 me-1" placeholder="Search all jobs">
+				<select class="form-select text-muted me-1">
+					<option selected="">Choose Preferred State</option>
+					<option value="1">Abia State</option>
+					<option value="2">Adamawa State</option>
+					<option value="3">Akwa-Ibom State</option>
+					<option value="4">Anambra State</option>
+					<option value="5">Bauchi State</option>
+					<option value="6">Bayelsa State</option>
+					<option value="7">Borno State</option>
+					<option value="8">Cross-River State</option>
+					<option value="9">Delta State</option>
+					<option value="10">Ebonyi State</option>
+					<option value="11">Edo State</option>
+					<option value="12">Ekiti State</option>
+					<option value="13">Enugu State</option>
+					<option value="14">Gombe State</option>
+					<option value="15">Imo State</option>
+					<option value="16">Jigawa State</option>
+					<option value="17">Kaduna State</option>
+					<option value="18">Kano State</option>
+					<option value="19">Katsina State</option>
+					<option value="20">Kebbi State</option>
+					<option value="21">Kogi State</option>
+					<option value="22">Kwara State</option>
+					<option value="23">Lagos State</option>
+					<option value="24">Nasarawa State</option>
+					<option value="25">Niger State</option>
+					<option value="26">Ogun State</option>
+					<option value="27">Ondo State</option>
+					<option value="28">Osun State</option>
+					<option value="29">Oyo State</option>
+					<option value="30">Plateau State</option>
+					<option value="31">Rivers State</option>
+					<option value="32">Sokoto State</option>
+					<option value="33">Taraba State</option>
+					<option value="34">Yobe State</option>
+					<option value="35">Zamfara State</option>
+					<option value="36">Abuja</option>
+				</select>
 				<button class="s-btn">Search</button>
 			</div>
 		</div>
-		<div class="d-flex mt-5 justify-content-center">
+		<div class="d-flex my-5 justify-content-center">
 			<ul class="nav nav-pills mb-4" id="pills-tabs3" role="tablist">
 				<li class="nav-item" role="presentation">
 					<button class="nav-link active" id="pills-be-worker-tab" data-bs-toggle="pill" data-bs-target="#pills-be-worker" type="button" role="tab" aria-controls="pills-be-worker" aria-selected="true">
@@ -53,7 +91,20 @@
 			</ul>
 		</div>
 		<div class="tab-content" id="pills-tabsContent3">
-			
+			<div class="tab-pane fade show active" id="pills-be-worker" role="tabpanel" aria-labelledby="pills-be-worker-tab">
+				<div class="d-flex align-items-start">
+					<div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+						<div class="nav-link active d-flex" id="v-tab1" data-bs-target="#v-tab1" type="button" role="tab" aria-controls="v-tab1" aria-selected="true">
+							<img class="ml-auto me-2" src="images/spicy.jpg" alt="" width="55" height="55" style="border-radius: 5px">
+							<div class="d-block">
+								<h5 id="fullname"> Lawal Habeeb</h5>
+								<p> Crop Harvester </p>
+								<p> Kano </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
