--- a/about.html
+++ b/about.html
@@ -13,29 +13,26 @@
 
     <div class="container-fluid">
         <div class="row mt-5">
-            <div class="col-lg-9">
+            <div class="col-xl-8 col-lg-8">
                 <div style="width: 70%; padding: 50px 0px; margin-left: 100px;">
                     <h5 style="text-decoration: underline; font-weight: bolder; font-family: Roboto; margin-bottom: 30px"> Who Are We </h5>
                     <h2 style="font-family: Roboto; font-weight: 900; font-size: 50px"> Improve Productivity <br> and connect with <br> Farmers around you </h2>
                     <p style="font-weight: normal; font-size: 20px"> Agrocom is a community created for people in the field of agriculture to help improve productivity and to bring farmers and other area of agricultural fields together to solve agricultural related problems. We offer a wide range of quality services that help bring ease to the agricultural community. <br>Agrocom is a platform used by anyone in the agricultural field to learn, share their knowledge, earn income, promote their business and improve productivity.<br> </p> 
                 </div>	
-                <div class="row d-flex align-items-center justify-content-center" style="background-color: #226C0F; color: #fff; height: 180px;">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-2">
+                <div class="d-flex align-items-center justify-content-center" style="background-color: #226C0F; color: #fff; height: 180px;">
+                    <div class="mx-3">
                         <h5> 20+ People </h5>
-                        <p> Monthly visitors to our site </p>
+                        <p style="width: 100px;"> Monthly visitors to our site </p>
                     </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-2">
+                    <div class="mx-5">
                         <h5> 1 Hundred </h5>
-                        <p> Questions asked by users </p>
+                        <p style="width: 100px;"> Questions asked by users </p>
                     </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-2">
+                    <div class="mx-3">
                         <h5> 30 Seconds </h5>
-                        <p> Average time between new questions </p>
+                        <p style="width: 100px;"> Average time between new questions </p>
                     </div>
-                    <div class="col-md-2"></div>
+
                 </div>
                 <div class="text-center" style="margin: 20px 0px 0px 100px;">
                     <h3 style="font-family: Roboto; font-weight: bolder;"> OUR PRODUCTS </h3>
@@ -43,7 +40,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <img src="images/agrocom_com.jpg" width="250" height="200" style="border-radius: 8px; font-family: Roboto; font-weight: bold;">
-                            <h5> Community Platform </h5>
+                            <h4> Community Platform </h4>
                             <p> Where users share and gain knowledge from other practitioners</p>
                             <button class="check" onclick="location.href='questions.html'"> Join Community
                             </button>
@@ -59,26 +56,31 @@
                             <img src="images/agrocom_advertize.jpg" width="250" height="200" style="border-radius: 8px; font-family: Roboto; font-weight: bold;">
                             <h4> Archive </h4>
                             <p> Check for inportant articles to read and learn more about the field of agriculture</p>
-                            <button class="check" onclick="location.href='questions.html'"> Advertize Here
+                            <button class="check" onclick="location.href='questions.html'"> View Archive
                             </button>
                         </div>
                     </div>
                 </div>
                 <div style="margin-left: 100px; margin-top: 50px;">
                     <h4 style="font-family: Roboto; font-weight: bold">Get in Touch with us</h4>
-                    <div class="row">
-                        <div class="col">
-                            <form>
-                                <div class="form-outline mb-4 fill-part">
-                                    <label for="text" class="form-label"> <b> Full Name </b> </label>
-                                    <input type="text" placeholder="Full Name" class="form-control">
-                                    <label class="form-label"> <b> Email address </b> </label>
-                                    <input type="email" placeholder="Your Email" class="form-control">
-                                    <label for="password" class="form-label"> <b> Message </b> </label>
-                                    <textarea rows="6" placeholder="Write Message" name="description" style="width: 310px"></textarea>
-                                    <button class="login"> <b> Send Message </b> </button>
-                                </div>
-                            </form>
+                    <div class="mt-4">
+                        <form>
+                            <div class="form-outline mb-4 fill-part">
+                                <label for="text" class="form-label"> <b> Full Name </b> </label>
+                                <input type="text" placeholder="Full Name" class="form-control">
+                                <label class="form-label"> <b> Email address </b> </label>
+                                <input type="email" placeholder="Your Email" class="form-control">
+                                <label for="password" class="form-label"> <b> Message </b> </label>
+                                <textarea rows="6" placeholder="Write Message" name="description" style="width: 310px"></textarea>
+                                <button class="login"> <b> Send Message </b> </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4">
+                
+            </div>
+        </div>
     </div>
 
 </body>
