finished html front

--- a/about.html
+++ b/about.html
@@ -14,22 +14,22 @@
     <div class="container-fluid">
         <div class="row mt-5">
             <div class="col-xl-8 col-lg-8">
-                <div style="width: 70%; padding: 50px 0px; margin-left: 100px;">
+                <div style="width: 85%; padding: 50px 0px; margin-left: 100px;">
                     <h5 style="text-decoration: underline; font-weight: bolder; font-family: Roboto; margin-bottom: 30px"> Who Are We </h5>
                     <h2 style="font-family: Roboto; font-weight: 900; font-size: 50px"> Improve Productivity <br> and connect with <br> Farmers around you </h2>
-                    <p style="font-weight: normal; font-size: 20px"> Agrocom is a community created for people in the field of agriculture to help improve productivity and to bring farmers and other area of agricultural fields together to solve agricultural related problems. We offer a wide range of quality services that help bring ease to the agricultural community. <br>Agrocom is a platform used by anyone in the agricultural field to learn, share their knowledge, earn income, promote their business and improve productivity.<br> </p> 
+                    <p style="font-weight: normal; font-size: 20px"> Agrocom is a community created for people in the field of agriculture to help improve productivity and to bring farmers and other area of agricultural fields together to solve agricultural related problems. We offer a wide range of quality services that help bring ease to the agricultural community. Agrocom is a platform used by anyone in the agricultural field to learn, share their knowledge, earn income, promote their business and improve productivity. </p> 
                 </div>	
                 <div class="d-flex align-items-center justify-content-center" style="background-color: #226C0F; color: #fff; height: 180px;">
                     <div class="mx-3">
-                        <h5> 20+ People </h5>
+                        <h5 style="color: black;"><b> 20+ People </b></h5>
                         <p style="width: 100px;"> Monthly visitors to our site </p>
                     </div>
                     <div class="mx-5">
-                        <h5> 1 Hundred </h5>
+                        <h5 style="color: black;"><b> 1 Hundred </b></h5>
                         <p style="width: 100px;"> Questions asked by users </p>
                     </div>
                     <div class="mx-3">
-                        <h5> 30 Seconds </h5>
+                        <h5 style="color: black;"><b> 30 Seconds </b></h5>
                         <p style="width: 100px;"> Average time between new questions </p>
                     </div>
 
@@ -39,21 +39,21 @@
                     <p style="font-weight: normal; font-size: 20px"> Our products and services like agro jobs and offers, agro advertising, agrochat, and agro news provide tools to help practitioners have ease of work and growth in their respective fields. </p>
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="images/agrocom_com.jpg" width="250" height="200" style="border-radius: 8px; font-family: Roboto; font-weight: bold;">
+                            <img src="images/agrocom_com.jpg" width="250" height="200">
                             <h4> Community Platform </h4>
                             <p> Where users share and gain knowledge from other practitioners</p>
                             <button class="check" onclick="location.href='questions.html'"> Join Community
                             </button>
                         </div>
                         <div class="col-md-4">
-                            <img src="images/agrocom_jobs.jpg" width="250" height="200" style="border-radius: 8px; font-family: Roboto; font-weight: bold;">
+                            <img src="images/agrocom_jobs.jpg" width="250" height="200">
                             <h4> Jobs and Offers </h4>
                             <p> View available Job opportunities in the field of agriculture</p>
                             <button class="check" onclick="location.href='jobs.html'"> Search Jobs
                             </button>
                         </div>
                         <div class="col-md-4">
-                            <img src="images/agrocom_advertize.jpg" width="250" height="200" style="border-radius: 8px; font-family: Roboto; font-weight: bold;">
+                            <img src="images/agrocom_advertize.jpg" width="250" height="200">
                             <h4> Archive </h4>
                             <p> Check for inportant articles to read and learn more about the field of agriculture</p>
                             <button class="check" onclick="location.href='questions.html'"> View Archive
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="margin-left: 100px; margin-top: 50px;">
+                <div class="ms-5 mt-4">
                     <h4 style="font-family: Roboto; font-weight: bold">Get in Touch with us</h4>
                     <div class="mt-4">
                         <form>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4">
-                
+
             </div>
         </div>
     </div>
