--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
                                 <label for="password" class="form-label"> <b> Message </b> </label>
                                 <textarea rows="6" placeholder="Write Message" name="description" style="width: 310px"></textarea>
                                 <button class="login"> <b> Send Message </b> </button>
+                            </div>
                         </form>
                     </div>
                 </div>
